# aws-external-account-subjec-token-draft

./: Cargo.toml  README.md
src/: lib.rs
